# animationOfPentagram

./: LICENSE  README.md  animationOfPentagram.cabal  stack.yaml
src/: Main.hs
